[package]
name = "raplay"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Library for playing audio"
homepage = "https://github.com/BonnyAD9/raplay"
repository = "https://github.com/BonnyAD9/raplay"
readme = "README.md"
keywords = ["audio"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
eyre = "0.6.8"
num = "0.4.1"
symphonia = { version = "0.5.3", features = ["all"] }
