[package]
name = "raplay"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0"
description = "Library for playing audio"
homepage = "https://github.com/BonnyAD9/raplay"
repository = "https://github.com/BonnyAD9/raplay"
readme = "README.md"
keywords = ["audio"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cpal = "0.15.2"
num = "0.4.1"
symphonia = { version = "0.5.3", features = ["all"] }
thiserror = "1.0.47"
