[package]
name = "raplay"
version = "0.4.1"
edition = "2024"
license = "GPL-3.0"
description = "Library for playing audio"
homepage = "https://github.com/BonnyAD9/raplay"
repository = "https://github.com/BonnyAD9/raplay"
readme = "README.md"
keywords = ["audio"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
cpal = "0.15.3"
num = "0.4.3"
serde = { version = "1.0.219", features = ["std", "derive"], optional = true }
symphonia = { version = "0.5.4", features = ["all"] }
thiserror = "2.0.12"

[features]
default = []
serde = ["dep:serde"]
